--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -10,6 +10,14 @@ set -g prefix C-a
 unbind C-b
 bind-key C-a send-prefix
 
+# Start windows and panes at 1, not 0
+set -g base-index 1
+set -g pane-base-index 1
+set-window-option -g pane-base-index 1
+set -g renumber-windows on
+
+bind r source-file ~/.tmux.conf \; display "Config reloaded!"
+
 unbind %
 bind | split-window -h
 
